--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@clerk/nextjs": "^4.29.1",
     "@google/generative-ai": "^0.1.3",
+    "@headlessui/react": "^1.7.17",
     "@prisma/client": "^5.7.1",
     "axios": "^1.6.3",
+    "framer-motion": "^10.17.0",
     "lucide-react": "^0.303.0",
     "next": "14.0.4",
     "prisma": "^5.7.1",
