--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/nextjs": "^4.29.1",
     "@google/generative-ai": "^0.1.3",
     "@headlessui/react": "^1.7.17",
+    "@hookform/resolvers": "^3.9.1",
     "@prisma/client": "^5.21.1",
     "axios": "^1.6.3",
     "framer-motion": "^10.17.0",
@@ -22,7 +23,8 @@
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
     "react-hot-toast": "^2.4.1",
-    "react-markdown": "^9.0.1"
+    "react-markdown": "^9.0.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
